src/index.css
@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap');

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  font-family: 'Inter', sans-serif;
}

html {
  font-size: 16px;
}

body {
  background-color: #ffffff;
  text-align: center;
  /* min-height: 100vh; */
  max-width: 100vw;
}

header,
main,
footer {
  max-width: 85vw;
  margin: 0 auto;
}

.red {
  color: rgba(226, 2, 2, 0.74);
  font-style: italic;
  display: flex;
  align-items: flex-start;
  justify-content: flex-start;
}

header {
  margin: 2rem 0;
  display: flex;
  align-items: flex-start;
  justify-content: center;
}

header a {
  display: block;
  color: #101828;
  font-size: 1.2rem;
  font-weight: bold;
  text-decoration: none;
  margin-top: 1rem;
}
.profile {
  margin-left: 6rem;
  position: relative;
}

.hover {
  position: absolute;
  left: 3.3rem;
  opacity: 0;
  transition: all 0.3s ease-in-out;
  cursor: pointer;
}

.hover:hover {
  opacity: 1;
}

main .buttons a {
  display: block;
  text-decoration: none;
  color: #101828;
  background-color: #eaecf0;
  padding: 1.5rem;
  margin: 0 auto;
  margin-top: 1rem;
  width: 90%;
  border-radius: 0.5rem;
  font-weight: bold;
  transition: all 0.3s ease-in-out;
}

main .buttons a:hover {
  /* border: 1px solid #101828; */
  background-color: #d0d5dd;
}

.hidden,
.option_icon {
  display: none;
}

.share_icon {
  margin-left: 3rem;
}

.icons {
  display: flex;
  align-items: center;
  justify-content: center;
  gap: 1rem;
  margin: 1.5rem 0;
}

small {
  color: #667085;
}

/* Footer */
footer {
  border-top: 1px solid #eaecf0;
  margin: 3rem 0 1rem;
  padding: 1rem 0;
  display: flex;
  align-items: center;
  justify-content: space-between;
}

/* Contact */
.contact.container {
  height: auto;
}

.contact_container {
  max-width: 50vw;
  margin: 5rem auto 0;
}

.contact_container h1,
.contact_container p {
  text-align: left;
  margin-bottom: 1.5rem;
}

.contact_container h1 {
  color: #101828;
  font-size: 2.2rem;
}

.contact_container p {
  color: #475467;
}

form {
  margin: 3rem 0;
}

.names {
  display: flex;
  align-items: center;
  gap: 2rem;
}

#first_name,
#last_name {
  width: 23rem;
}

label {
  display: block;
  text-align: left;
  margin-bottom: 0.4rem;
  color: #344054;
}

input[type='text'],
input[type='email'] {
  width: 100%;
  padding: 0.6rem;
  border-radius: 0.5rem;
  border: 1.5px solid #667085;
  margin-bottom: 0.25rem;
}

input[type='text'].error,
input[type='email'].error {
  border: 2px solid rgba(226, 2, 2, 0.74);
}

.m {
  margin-bottom: 1.25rem;
}

.checkbox {
  display: flex;
  align-items: center;
  justify-content: flex-end;
  flex-direction: row-reverse;
  gap: 0.5rem;
}

input[type='checkbox'] {
  height: 1rem;
}

label.checking {
  padding-top: 0.4rem;
  font-size: 0.95rem;
}

input:focus {
  outline: none;
  border: 1.5px solid #b2ddff;
}

#message {
  padding-bottom: 8.25rem;
}

button {
  background-color: #1570ef;
  color: #ffff;
  margin-top: 1.5rem;
  padding: 1rem;
  width: 100%;
  font-weight: bold;
  border-radius: 0.5rem;
  border: none;
  cursor: pointer;
  transition: all 0.3s ease-in-out;
}

button:hover {
  background-color: #1570efb8;
}

@media (max-width: 767px) {
  .profile {
    margin-left: 2rem;
  }

  main .buttons a {
    width: 95%;
  }

  .contact_container {
    max-width: 95vw;
    margin: 5rem auto 0;
  }

  .names {
    display: block;
    align-items: center;
    flex-direction: column;
    gap: 2rem;
  }

  #first_name,
  #last_name {
    width: 100%;
  }

  footer {
    display: flex;
    align-items: flex-start;
    justify-content: flex-start;
    flex-direction: column;
  }

  footer img {
    margin: 1rem 0;
  }
  .share_icon {
    display: none;
  }

  .option_icon {
    display: inline;
  }
}

